add createProduct and getProducts
